`glfwSetCursorPos` not functioning in GNOME 47, causing cursor not centering after opening in-game GUIs in Minecraft
Affected version
- OS: Arch Linux
- Mutter: 47.0
- Wayland (XWayland)
Bug summary
glfwSetCursorPos
not functioning, causing cursor not centering after opening in-game GUIs in Minecraft.
Steps to reproduce
In Minecraft:
- Enter a Minecraft world.
- Open the inventory.
- Move the cursor.
- Close and open the inventory again.
In a GLFW demo:
- Call
glfwSetCursorPos
to set the position of the cursor to the center of the window.
What happened
In Minecraft:
After opening the inventory, the cursor appears at the last position before it is hidden.
(This does not happen on Xorg or GNOME 46)
In the GLFW demo:
The cursor does not move.
(This does not happen on Xorg, not tested on GNOME 46)
What did you expect to happen
In Minecraft:
The cursor should appear at the center of the window after opening the inventory.
In the GLFW demo:
The cursor should move to the center of the window.
Relevant logs, screenshots, screencasts etc.
Edited by FairySunny